--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -43,8 +43,8 @@
     color: #d6d4d4;
 }
 ::-webkit-scrollbar {
-    width: 0px;  /* remove scrollbar space */
-    background: transparent;  /* optional: just make scrollbar invisible */
+    width: 0px;  
+    background: transparent; 
 }
 #profile ion-icon{
 	font-size: 3.2em;
@@ -60,5 +60,5 @@
 }
 .tools ion-label{
 	text-align:right;
-	margin:0px !importnant! 	
+	margin:0px !important;
 }
