--- a/src/app/app.html
+++ b/src/app/app.html
@@ -20,7 +20,7 @@
             <ion-icon name="contact"></ion-icon>
           </ion-avatar>
           <h2>{{nombreUsuario()}}</h2>
-          <p>{{formulario.idEmpresa}}</p>
+          <p>{{nombreEmpresa}}</p>
         </ion-item>
 
         <ion-item class="tools">
